--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -8,7 +8,7 @@
         </li>
         <!-- About Section -->
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="about-link">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'about' %}" id="about-link">
                 About
             </a>
         </li>
