--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="container text-center">
-    <div class="my-4"></div> <!-- Spacer -->
-    <img src="{{ MEDIA_URL }}biglogo50.webp" alt="big logo in home" class="mx-auto d-block img-fluid" style="max-width: 300px;">
+    <div class="my-5"></div> <!-- Spacer -->
+    <img src="{{ MEDIA_URL }}biglogo50.webp" alt="big logo in home" class="mx-auto d-block img-fluid shadow-break">
 
     <!-- Contact Information -->
     <div class="row py-4">
