--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -6,7 +6,7 @@
     <!-- Top Image -->
     <div class="row mb-5 justify-content-center">
         <div class="col-md-8">
-            <img src="{{ MEDIA_URL }}biglogo50.webp" alt="big logo in home" class="shadow-break mx-auto d-block img-fluid">
+            <img src="{{ MEDIA_URL }}biglogo50.webp" alt="big sanda bazaar logo in home" class="shadow-break mx-auto d-block img-fluid">
         </div>
     </div>
     <div class="container my-5">
@@ -53,7 +53,7 @@
     
         <!-- Image Section -->
         <div class="text-center my-5">
-            <img src="{{ MEDIA_URL }}oldgotland.png" alt="Bottom Image Description" class="img-fluid rounded mx-auto d-block">
+            <img src="{{ MEDIA_URL }}oldgotland.webp" alt="Old map of gotland" class="img-fluid rounded mx-auto d-block">
         </div>
     
         <!-- Final Section -->
