--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -126,6 +126,29 @@
         </a>
     </div>
     <div class="my-5"></div> <!-- Spacer -->
+    {% block latestblog %}
+    <div class="container my-4">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card text-center">
+                    <div class="card-header bg-sanddark">
+                        <h3>Latest Blog Post</h3>
+                    </div>
+                    <div class="card-body bg-sandlight">
+                        {% if latest_post %}
+                            <h4 class="card-title">{{ latest_post.title }}</h4>
+                            <div class="card-text">{{ latest_post.content|striptags|truncatewords:50|safe }}</div>
+                            <a href="{% url 'blog_index' %}" class="btn btn-primary">Read More</a>
+                        {% else %}
+                            <p class="card-text">No recent blog posts.</p>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endblock %}
+    <div class="my-5"></div> <!-- Spacer -->
     <!-- Weekly Opening Hours -->
     <div class="container my-5">
         <h2 class="mb-4 text-center">Weekly Opening Hours</h2>
