--- a/static/css/base.css
+++ b/static/css/base.css
@@ -339,8 +339,18 @@ color: #17a2b8; /* text-info */
   background-size: calc(2*var(--s)) calc(2*var(--s));
 }
 
-/* -------------------------------- Media Queries */
+.blog-post-image {
+  max-height: 200px;
+  object-fit: cover;
+}
 
+/* -------------------------------- Media Queries */
+@media (min-width: 1440px) {
+  .blog-post-image {
+    max-height: 500px;
+    object-fit: cover;
+  }
+}
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
   .container {
