--- a/templates/base.html
+++ b/templates/base.html
@@ -146,7 +146,7 @@
     {% endblock %}
     {% block content %}
     {% endblock %}
-    <footer class="bg-sanddark text-white pt-4 pb-4 w-100">
+    <footer class="bg-sanddark text-white pt-4 pb-4 mt-4 w-100">
       <div class="container">
           <div class="row">
               <!-- Social Media Links -->
