--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -19,6 +19,8 @@
                     <div class="card-body">
                         <h2 class="card-title">{{ post.title }}</h2>
                         <p class="card-text font-size-text">{{ post.content|safe }}</p>
+                        <hr>
+                        <p class="text-muted"><strong>Published on {{ post.published_date|date:"F j, Y" }}</strong></p> 
                         <!-- Additional details can be added here -->
                     </div>
                 </div>
