--- a/bazaar/templates/bazaar/edit_product.html
+++ b/bazaar/templates/bazaar/edit_product.html
@@ -26,12 +26,14 @@
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
+                    {% if field.name != 'rating' %}
                         {% if field.name != 'image' %}
                             {{ field | as_crispy_field }}
                         {% else %}
                             {{ field }}
                         {% endif %}
-                    {% endfor %}
+                    {% endif %}
+                {% endfor %}
                     <div class="text-right">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'bazaar' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Update Product</button>
