--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container mb-2">
+    <div class="container mb-2 min-height-100vh">
         <div class="row">
             <div class="col">
                 <hr>
