--- a/bazaar/templates/bazaar/add_product.html
+++ b/bazaar/templates/bazaar/add_product.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">
+    <div class="container min-height-100vh">
         <div class="row">
             <div class="col-12 col-md-6">
                 <hr>
