--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -52,79 +52,133 @@
             </div>
         </div>
     </div>
-    <!-- Carousel for Desktop (4 items per slide) -->
-    <div id="productCarouselDesktop" class="carousel slide d-none d-lg-block" data-ride="carousel">
-        <div class="carousel-inner">
-            {% for product in products %}
-            {% if forloop.counter0|divisibleby:4 %}
+<!-- Carousel for Desktop (3 items per slide with narrower width) -->
+<div id="productCarouselDesktop" class="carousel slide d-none d-lg-block" data-ride="carousel">
+    <div class="carousel-inner">
+        {% for product in products %}
+        {% if forloop.counter0|divisibleby:3 %}
             {% if not forloop.first %}
-            </div></div> <!-- Close the previous row and carousel-item -->
+                </div> <!-- Close the previous row -->
             {% endif %}
-            <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                <div class="row justify-content-center">
+            {% if forloop.first %}
+                <div class="carousel-item active">
+            {% else %}
+                <div class="carousel-item">
             {% endif %}
-                    <div class="col-lg-3 d-flex align-items-stretch">
-                        <div class="card card-carousel w-100">
-                            {% if product.image_url %}
-                                <img class="card-img-top card-img-top-carousel" src="{{ product.image_url }}" alt="{{ product.name }}">
-                            {% elif product.image %}
-                                <img class="card-img-top card-img-top-carousel" src="{{ product.image.url }}" alt="{{ product.name }}">
-                            {% else %}
-                                <img class="card-img-top card-img-top-carousel" src="{{ MEDIA_URL }}noimage.png" alt="Default Image">
-                            {% endif %}
-                            <div class="card-body card-body-carousel">
-                                <h5 class="card-title">{{ product.name }}</h5>
-                                <a href="{% url 'product_detail' product.id %}" class="btn btn-primary">View Product</a>
+            <div class="row justify-content-center">
+        {% endif %}
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="card h-100 border-0">
+                <a href="{% url 'product_detail' product.id %}" class="text-decoration-none text-reset">
+                    {% if product.image_url %}
+                        <img class="card-img-top img-fluid"
+                             src="{{ product.image_url }}"
+                             alt="{{ product.name }}">
+                    {% elif product.image %}
+                        <img class="card-img-top img-fluid"
+                             src="{{ MEDIA_URL }}{{ product.image }}"
+                             alt="{{ product.name }}">
+                    {% else %}
+                        <img class="card-img-top img-fluid"
+                             src="{{ MEDIA_URL }}noimage.png"
+                             alt="{{ product.name }}">
+                    {% endif %}
+                    <div class="card-body pb-0">
+                        <p class="mb-0">{{ product.name }}</p>
+                    </div>
+                    <div class="card-footer bg-white pt-0 border-0 text-left">
+                        <div class="row">
+                            <div class="col">
+                                <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                                {% if product.category %}
+                                    <p class="small mt-1 mb-0">
+                                        <a class="text-muted"
+                                           href="{% url 'bazaar' %}?category={{ product.category.name }}">
+                                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                                        </a>
+                                    </p>
+                                {% endif %}
+                                {% if product.rating %}
+                                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} /
+                                    5</small>
+                                {% else %}
+                                    <small class="text-muted">No Rating</small>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
-            {% if forloop.counter|divisibleby:4 or forloop.last %}
-                </div>
+                </a>
             </div>
-            {% endif %}
-            {% endfor %}
         </div>
-        <!-- Carousel controls -->
-        <a class="carousel-control-prev" href="#productCarouselDesktop" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#productCarouselDesktop" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        {% if forloop.counter|divisibleby:3 or forloop.last %}
+            </div> <!-- Close the row -->
+        </div> <!-- Close the carousel-item -->
+        {% endif %}
+        {% endfor %}
     </div>
-    <!-- Carousel for Mobile (1 item per slide) -->
-    <div id="productCarouselMobile" class="carousel slide d-lg-none" data-ride="carousel">
-        <div class="carousel-inner">
-            {% for product in products %}
-                <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                    <div class="card card-carousel w-100 text-center">
-                        {% if product.image_url %}
+    <!-- Carousel controls (moved outside of the carousel-inner) -->
+    <a class="carousel-control-prev" href="#productCarouselDesktop" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#productCarouselDesktop" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+</div>
+<!-- Carousel for Mobile (1 item per slide) -->
+<div id="productCarouselMobile" class="carousel slide d-lg-none" data-ride="carousel">
+    <div class="carousel-inner">
+        {% for product in products %}
+            <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                <div class="card card-carousel w-100 text-center max-card-h">
+                    {% if product.image_url %}
+                        <a href="{% url 'product_detail' product.id %}">
                             <img class="card-img-top card-img-top-carousel" src="{{ product.image_url }}" alt="{{ product.name }}">
-                        {% elif product.image %}
+                        </a>
+                    {% elif product.image %}
+                        <a href="{% url 'product_detail' product.id %}">
                             <img class="card-img-top card-img-top-carousel" src="{{ product.image.url }}" alt="{{ product.name }}">
-                        {% else %}
+                        </a>
+                    {% else %}
+                        <a href="{% url 'product_detail' product.id %}">
                             <img class="card-img-top card-img-top-carousel" src="{{ MEDIA_URL }}noimage.png" alt="Default Image">
+                        </a>
+                    {% endif %}
+                    <div class="card-body card-body-carousel">
+                        <h5 class="card-title">{{ product.name }}</h5>
+                    </div>
+                    <div class="card-footer bg-white pt-0 border-0 text-left">
+                        <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                        {% if product.category %}
+                            <p class="small mt-1 mb-0">
+                                <a class="text-muted"
+                                   href="{% url 'bazaar' %}?category={{ product.category.name }}">
+                                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                                </a>
+                            </p>
                         {% endif %}
-                        <div class="card-body card-body-carousel">
-                            <h5 class="card-title">{{ product.name }}</h5>
-                            <a href="{% url 'product_detail' product.id %}" class="btn btn-primary">View Product</a>
-                        </div>
+                        {% if product.rating %}
+                            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                        {% else %}
+                            <small class="text-muted">No Rating</small>
+                        {% endif %}
                     </div>
                 </div>
-            {% endfor %}
-        </div>
-        <!-- Carousel controls -->
-        <a class="carousel-control-prev" href="#productCarouselMobile" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#productCarouselMobile" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+            </div>
+        {% endfor %}
     </div>
+    <!-- Carousel controls -->
+    <a class="carousel-control-prev" href="#productCarouselMobile" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#productCarouselMobile" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
     <div class="my-5"></div> <!-- Spacer -->
     {% block latestblog %}
     <div class="container my-4">
