--- a/wishlist/templates/wishlist/wishlist_page.html
+++ b/wishlist/templates/wishlist/wishlist_page.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container my-4">
+<div class="container my-4 min-height-100vh">
     <div class="row justify-content-center">
         <div class="col-12">
             <h2 class="text-center mb-4">{{ request.user.username }}'s Wishlist</h2>
