--- a/static/css/base.css
+++ b/static/css/base.css
@@ -351,6 +351,13 @@ color: #17a2b8; /* text-info */
   max-width: 300px;
   margin: 0 auto;
 }
+#mc_embed_signup {
+  background: #fff;
+  false;
+  clear: left;
+  font: 14px Helvetica, Arial, sans-serif;
+  width: 600px;
+}
 /* -------------------------------- Media Queries */
 @media (min-width: 1440px) {
   .blog-post-image {
