--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,10 @@
     {% block meta %}
       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
       <meta charset="utf-8" />
-      <meta name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    {% endblock %}
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+      <meta name="description" content="Discover Sanda Bazaar, a unique cultural and shopping destination in Gotland. Explore our curated selection of local crafts, artisan products, and exclusive second-hand items. Visit our serene summer shop for an authentic Gotland experience.">
+      <meta name="keywords" content="gotland, gotlands, gotland products, gotland bazaar, cultural items gotland, gotland artisan market, gotland handmade goods, summer shop gotland, cafe in gotland, best coffee gotland, relaxing cafe gotland, peaceful coffee spot gotland, second-hand market gotland, unique finds gotland, exclusive second-hand gotland, gotland tourist shop, must-visit in gotland, destination gotland shopping, online shopping gotland, gotland e-commerce, gotland gifts online, buy gotland products online, gotland community market, local bazaar gotland, gotland local artisans, support local gotland, sanda bazaar">
+    {% endblock meta %}
     {% block extra_meta %}{% endblock %}
     {% block corecss %}
       <link rel="stylesheet"
@@ -19,8 +20,8 @@
       <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Eczar&display=swap" rel="stylesheet">
       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
       <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-    {% endblock %}
-    {% block extra_css %}{% endblock %}
+    {% endblock corecss %}
+    {% block extra_css %}{% endblock extra_css %}
     {% block corejs %}
       <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
       <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -29,10 +30,10 @@
       
       <!-- Stripe -->
       <script src="https://js.stripe.com/v3/"></script>
-    {% endblock %}
-    {% block extra_js %}{% endblock %}
+    {% endblock corejs %}
+    {% block extra_js %}{% endblock extra_js%}
     <title>Sanda Bazaar
-      {% block extra_title %}{% endblock %}
+      {% block extra_title %}{% endblock extra_title %}
     </title>
   </head>
   <body>
