--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Eczar&display=swap" rel="stylesheet">
-      <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+      <link href="https://cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
       <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     {% endblock corecss %}
     {% block extra_css %}{% endblock extra_css %}
@@ -173,46 +173,35 @@
                   </address>
               </div>
               <!-- Newsletter Signup (Right Side) -->
-              <div class="col-md-4 mb-3">
-                  <div id="mc_embed_shell">
-                      <div id="mc_embed_signup">
-                          <form action="https://herokuapp.us21.list-manage.com/subscribe/post?u=a8f664296a6dff5b7d15b5ad9&amp;id=18f7c2d980&amp;f_id=0030f3e6f0"
-                              method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                              target="_blank">
-                              <div id="mc_embed_signup_scroll">
-                                  <h2>Subscribe</h2>
-                                  <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                                  <div class="mc-field-group">
-                                      <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
-                                      <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="">
-                                      <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
-                                  </div>
-                                  <div id="mce-responses" class="clear foot">
-                                      <div class="response alert alert-danger" id="mce-error-response" style="display: none;"></div>
-                                      <div class="response alert alert-success" id="mce-success-response" style="display: none;"></div>
-                                  </div>
-                                  <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                                      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
-                                      <input type="text" name="b_a8f664296a6dff5b7d15b5ad9_18f7c2d980" tabindex="-1" value="">
-                                  </div>
-                                  <div class="optionalParent">
-                                      <div class="clear foot">
-                                          <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-                                      </div>
-                                  </div>
-                              </div>
-                          </form>
-                      </div>
-                  </div>
+              <div id="mc_embed_shell">
+                <div id="mc_embed_signup">
+                    <form action="https://herokuapp.us21.list-manage.com/subscribe/post?u=a8f664296a6dff5b7d15b5ad9&amp;id=18f7c2d980&amp;f_id=0030f3e6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                        <div id="mc_embed_signup_scroll"><h2>Subscribe</h2>
+                            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                            <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
+                            <div id="mce-responses" class="clear foot">
+                                <div class="response" id="mce-error-response" style="display: none;"></div>
+                                <div class="response" id="mce-success-response" style="display: none;"></div>
+                            </div>
+                            <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                              <input type="text" name="b_a8f664296a6dff5b7d15b5ad9_18f7c2d980" tabindex="-1" value="">
+                            </div>
+                            <div class="optionalParent">
+                                <div class="clear foot">
+                                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                            </div>
+                        </div>
+                    </div>
+                  </form>
               </div>
-          </div>
+            </div>
       </div>
   </footer>
     {% block postloadjs %}
       <script type="text/javascript">
         $('.toast').toast('show');
       </script>
-      <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+      <script type="text/javascript" src="https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
       <script type="text/javascript">
         (function($) {
           window.fnames = new Array(); 
