--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -52,128 +52,62 @@
             </div>
         </div>
     </div>
-<!-- Carousel for Desktop (5 items per slide) -->
-<div id="productCarouselDesktop" class="carousel slide d-none d-lg-block" data-ride="carousel">
+<!-- Carousel for Desktop and Mobile (1 item per slide) -->
+<div id="productCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         {% for product in products %}
-        <!-- Start new carousel-item every five products -->
-        {% if forloop.counter0|divisibleby:5 %}
-            {% if not forloop.first %}
-                </div> <!-- Close the previous row -->
-                </div> <!-- Close the previous carousel-item -->
-            {% endif %}
             <div class="carousel-item {% if forloop.first %}active{% endif %}">
                 <div class="row justify-content-center">
-        {% endif %}
-        
-        <!-- Product Column -->
-        <div class="col-lg-2 col-md-3 col-sm-4">
-            <div class="card h-100 border-0 max-card-h">
-                <a href="{% url 'product_detail' product.id %}" class="text-decoration-none text-reset">
-                    {% if product.image_url %}
-                        <img class="card-img-top img-fluid" src="{{ product.image_url }}" alt="{{ product.name }}">
-                    {% elif product.image %}
-                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}{{ product.image }}" alt="{{ product.name }}">
-                    {% else %}
-                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                    {% endif %}
-                    <div class="card-body pb-0">
-                        <p class="mb-0">{{ product.name }}</p>
-                    </div>
-                    <div class="card-footer bg-white pt-0 border-0 text-left">
-                        <div class="row">
-                            <div class="col">
-                                <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
-                                {% if product.category %}
-                                    <p class="small mt-1 mb-0">
-                                        <a class="text-muted" href="{% url 'bazaar' %}?category={{ product.category.name }}">
-                                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                                        </a>
-                                    </p>
-                                {% endif %}
-                                {% if product.rating %}
-                                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                    <div class="col-12">
+                        <div class="card h-100 border-0 max-size-card">
+                            <a href="{% url 'product_detail' product.id %}" class="text-decoration-none text-reset">
+                                {% if product.image_url %}
+                                    <img class="card-img-top img-fluid" src="{{ product.image_url }}" alt="{{ product.name }}">
+                                {% elif product.image %}
+                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}{{ product.image }}" alt="{{ product.name }}">
                                 {% else %}
-                                    <small class="text-muted">No Rating</small>
+                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 {% endif %}
-                            </div>
+                                <div class="card-body pb-0">
+                                    <p class="mb-0">{{ product.name }}</p>
+                                </div>
+                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                    <div class="row">
+                                        <div class="col">
+                                            <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                                            {% if product.category %}
+                                                <p class="small mt-1 mb-0">
+                                                    <a class="text-muted" href="{% url 'bazaar' %}?category={{ product.category.name }}">
+                                                        <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                                                    </a>
+                                                </p>
+                                            {% endif %}
+                                            {% if product.rating %}
+                                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                                            {% else %}
+                                                <small class="text-muted">No Rating</small>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
-                    </div>      
-                </a>
+                    </div>
+                </div>
             </div>
-        </div>
-
-        <!-- Close the row and carousel-item at the end of every fifth product or the last product -->
-        {% if forloop.counter|divisibleby:5 or forloop.last %}
-                </div> <!-- Close the row -->
-            </div> <!-- Close the carousel-item -->
-        {% endif %}
         {% endfor %}
     </div>
     
     <!-- Carousel controls -->
-    <a class="carousel-control-prev" href="#productCarouselDesktop" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#productCarousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#productCarouselDesktop" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#productCarousel" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
-</div>
-<!-- Carousel for Mobile (1 item per slide) -->
-<div id="productCarouselMobile" class="carousel slide d-lg-none" data-ride="carousel">
-    <div class="carousel-inner">
-        {% for product in products %}
-        <div class="carousel-item {% if forloop.first %}active{% endif %}">
-            <div class="card card-carousel w-100 text-center max-card-hm">
-                {% if product.image_url %}
-                    <a href="{% url 'product_detail' product.id %}">
-                        <img class="card-img-top card-img-top-carousel" src="{{ product.image_url }}" alt="{{ product.name }}">
-                    </a>
-                {% elif product.image %}
-                    <a href="{% url 'product_detail' product.id %}">
-                        <img class="card-img-top card-img-top-carousel" src="{{ product.image.url }}" alt="{{ product.name }}">
-                    </a>
-                {% else %}
-                    <a href="{% url 'product_detail' product.id %}">
-                        <img class="card-img-top card-img-top-carousel" src="{{ MEDIA_URL }}noimage.png" alt="Default Image">
-                    </a>
-                {% endif %}
-                <div class="card-body d-flex flex-column">
-                    <h5 class="card-title mt-auto">{{ product.name }}</h5>
-                    <div class="card-footer bg-white pt-0 border-0 text-left mt-auto w-100">
-                        <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
-                        {% if product.category %}
-                            <p class="small mt-1 mb-0">
-                                <a class="text-muted"
-                                   href="{% url 'bazaar' %}?category={{ product.category.name }}">
-                                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                                </a>
-                            </p>
-                        {% endif %}
-                        {% if product.rating %}
-                            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                        {% else %}
-                            <small class="text-muted">No Rating</small>
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
-        </div>
-        {% endfor %}
-    </div>
-    <!-- Carousel controls -->
-    <a class="carousel-control-prev" href="#productCarouselMobile" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#productCarouselMobile" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-    <div class="my-5"></div> <!-- Spacer -->
+</div><div class="my-5"></div> <!-- Spacer -->
     {% block latestblog %}
     <div class="container my-4">
         <div class="row justify-content-center">
