buggfix fixing carousel img sizes, fixing contrast errors home/footer

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,7 +5,7 @@
 <div class="container text-center">
     <div class="my-5"></div> <!-- Spacer -->
         <img src="{{ MEDIA_URL }}biglogo50.webp" alt="big logo in home" class="shadow-break mx-auto d-block img-fluid">
-    <div class="my-5"></div> <!-- Spacer -->
+    <div class="my-5 py-5"></div> <!-- Spacer -->
     <div class="row py-4 intro-text-section">
         <div class="col-lg-10 mx-auto ">
             <!-- Grouped Heading and Subheading -->
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="my-5"></div> <!-- Spacer -->
-    <div class="container my-4">
+    <div class="container my-5 py-5">
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card text-center">
@@ -62,11 +62,11 @@
                         <div class="card h-100 border-0 max-size-card">
                             <a href="{% url 'product_detail' product.id %}" class="text-decoration-none text-reset">
                                 {% if product.image_url %}
-                                    <img class="card-img-top img-fluid" src="{{ product.image_url }}" alt="{{ product.name }}">
+                                    <img class="card-img-top card-img-top-carousel img-fluid" src="{{ product.image_url }}" alt="{{ product.name }}">
                                 {% elif product.image %}
-                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}{{ product.image }}" alt="{{ product.name }}">
+                                    <img class="card-img-top card-img-top-carousel img-fluid" src="{{ MEDIA_URL }}{{ product.image }}" alt="{{ product.name }}">
                                 {% else %}
-                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                    <img class="card-img-top card-img-top-carousel img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 {% endif %}
                                 <div class="card-body pb-0">
                                     <p class="mb-0">{{ product.name }}</p>
@@ -107,20 +107,21 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
-</div><div class="my-5"></div> <!-- Spacer -->
+</div>
+<div class="my-5"></div> <!-- Spacer -->
     {% block latestblog %}
-    <div class="container my-4">
+    <div class="container py-5">
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card text-center">
                     <div class="card-header bg-sanddark">
                         <h3>Latest Blog Post</h3>
                     </div>
-                    <div class="card-body bg-sandlight">
+                    <div class="card-body bg-sandlight font-size-text">
                         {% if latest_post %}
                             <h4 class="card-title">{{ latest_post.title }}</h4>
                             <div class="card-text">{{ latest_post.content|striptags|truncatewords:50|safe }}</div>
-                            <a href="{% url 'blog_index' %}" class="btn btn-primary">Read More</a>
+                            <a href="{% url 'blog_index' %}" class="btn btn-black">Read More</a>
                         {% else %}
                             <p class="card-text">No recent blog posts.</p>
                         {% endif %}
