--- a/templates/base.html
+++ b/templates/base.html
@@ -148,7 +148,7 @@
     {% endblock %}
     {% block content %}
     {% endblock %}
-    <footer class="bg-sanddark text-white pt-4 pb-4 mt-4 w-100">
+    <footer class="bg-sanddark text-black font-size-text pt-4 pb-4 mt-4 w-100">
       <div class="container">
           <div class="row">
               <!-- Social Media Links (Left Side) -->
@@ -177,8 +177,8 @@
                 <div id="mc_embed_signup">
                     <form action="https://herokuapp.us21.list-manage.com/subscribe/post?u=a8f664296a6dff5b7d15b5ad9&amp;id=18f7c2d980&amp;f_id=0030f3e6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
                         <div id="mc_embed_signup_scroll"><h2>Subscribe</h2>
-                            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                            <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
+                            <div class="indicates-required"><span class="asterisk font-size-text font-weight-bold">*</span> <span class="font-size-text-md font-weight-bold">indicates required</span></div>
+                            <div class="mc-field-group"><label for="mce-EMAIL"><span class="font-size-text-md font-weight-bold">Email Address</span> <span class="asterisk font-size-text font-weight-bold">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
                             <div id="mce-responses" class="clear foot">
                                 <div class="response" id="mce-error-response" style="display: none;"></div>
                                 <div class="response" id="mce-success-response" style="display: none;"></div>
