add faq app with templates, minor style adjustments index.html & navbar

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -117,7 +117,7 @@
                     <div class="card-header bg-sanddark">
                         <h3>Latest Blog Post</h3>
                     </div>
-                    <div class="card-body bg-sandlight font-size-text">
+                    <div class="card-body bg-sandlight font-size-text-md">
                         {% if latest_post %}
                             <h4 class="card-title">{{ latest_post.title }}</h4>
                             <div class="card-text">{{ latest_post.content|striptags|truncatewords:50|safe }}</div>
