readme add agile methodology and start of features minor style fixes

--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container mt-4 w-50 min-height-100vh text-center">
+<div class="container mt-4 min-height-100vh text-center">
     <div class="my-5"></div> <!-- Spacer -->
     <img src="{{ MEDIA_URL }}biglogo50.webp" alt="big logo in home" class="shadow-break mx-auto d-block img-fluid">
     <h1 class="py-5">Frequently Asked Questions</h1>
 
-    <div id="faqAccordion" class="py-5">
+    <div id="faqAccordion" class="py-5 w-80">
 
         <!-- FAQ 1 -->
         <div class="card">
