--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                      name="q"
                      placeholder="Search our site" />
               <div class="input-group-append">
-                <button class="form-control btn border border-black rounded-pill"
+                <button class="form-control btn border border-black rounded-pill mx-2"
                         type="submit">
                   <span class="icon">
                     <i class="fas fa-search"></i>
@@ -85,7 +85,7 @@
                 <!-- Django template conditions for user authentication and permissions -->
                 {% if request.user.is_authenticated %}
                   {% if  request.user.is_superuser %}
-                    <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                    <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
                   {% endif %}
                   <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                   <a href="{% url 'mywishlist' %}" class="dropdown-item">My Wishlist</a>
