--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -7,10 +7,9 @@
     <h1 class="py-5">Frequently Asked Questions</h1>
 
     <div id="faqAccordion" class="py-5 w-80">
-
         <!-- FAQ 1 -->
         <div class="card">
-            <div class="card-header bg-sanddark">
+            <div class="card-header bg-sanddark" id="headingOne">
                 <h2 class="mb-0">
                     <button class="btn btn-link collapsed text-black font-size-text" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                         Do you deliver outside of Sweden?
@@ -19,14 +18,14 @@
             </div>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#faqAccordion">
                 <div class="card-body font-size-text-md bg-sandlight">
-                    Yes, we deliver outside Sweden. Please contact us for the shipping price, as it needs to be calculated based on your location and our logistics.
+                    Yes, we deliver outside Sweden. Please contact us for the shipping price, as it needs to be calculated based on your location and our logistics.                    
                 </div>
             </div>
         </div>
 
         <!-- FAQ 2 -->
         <div class="card">
-            <div class="card-header bg-sanddark">
+            <div class="card-header bg-sanddark" id="headingTwo">
                 <h2 class="mb-0">
                     <button class="btn btn-link collapsed text-black font-size-text" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         What is your shipping policy?
@@ -42,7 +41,7 @@
 
         <!-- FAQ 3 -->
         <div class="card">
-            <div class="card-header bg-sanddark">
+            <div class="card-header bg-sanddark" id="headingThree">
                 <h2 class="mb-0">
                     <button class="btn btn-link collapsed text-black font-size-text" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                         Can I return products?
@@ -58,7 +57,7 @@
 
         <!-- FAQ 4 -->
         <div class="card">
-            <div class="card-header bg-sanddark">
+            <div class="card-header bg-sanddark" id="headingFour">
                 <h2 class="mb-0">
                     <button class="btn btn-link collapsed text-black font-size-text" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                         How can I contact you?
@@ -74,7 +73,7 @@
 
         <!-- FAQ 5 -->
         <div class="card">
-            <div class="card-header bg-sanddark">
+            <div class="card-header bg-sanddark" id="headingFive">
                 <h2 class="mb-0">
                     <button class="btn btn-link collapsed text-black font-size-text" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                         How do I get to your summer shop?
@@ -90,7 +89,7 @@
 
         <!-- FAQ 6 -->
         <div class="card">
-            <div class="card-header bg-sanddark">
+            <div class="card-header bg-sanddark" id="headingSix">
                 <h2 class="mb-0">
                     <button class="btn btn-link collapsed text-black font-size-text" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                         What kind of products do we sell?
@@ -106,7 +105,7 @@
 
         <!-- FAQ 7 -->
         <div class="card">
-            <div class="card-header bg-sanddark">
+            <div class="card-header bg-sanddark" id="headingSeven">
                 <h2 class="mb-0">
                     <button class="btn btn-link collapsed text-black font-size-text" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
                         What is Pre-Loved?
@@ -122,7 +121,7 @@
 
         <!-- FAQ 8 -->
         <div class="card">
-            <div class="card-header bg-sanddark">
+            <div class="card-header bg-sanddark" id="headingEight">
                 <h2 class="mb-0">
                     <button class="btn btn-link collapsed text-black font-size-text" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
                         Why can I only see new Pre-Loved items online at the end of the summer season?
@@ -138,7 +137,7 @@
 
         <!-- FAQ 9 -->
         <div class="card">
-            <div class="card-header bg-sanddark">
+            <div class="card-header bg-sanddark" id="headingNine">
                 <h2 class="mb-0">
                     <button class="btn btn-link collapsed text-black font-size-text" type="button" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
                         Do you create custom malas?
@@ -151,7 +150,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 {% endblock %}
