--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -35,7 +35,7 @@
             <div class="mt-4">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d81874.38964569918!2d18.182150057648116!3d57.40686425523649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46f7a1db1ee5a00b%3A0x38444191b5144cd9!2sSANDA%20NYSTUGU%20573%2C%20623%2079%20Klintehamn!5e1!3m2!1ssv!2sse!4v1704987553125!5m2!1ssv!2sse"
-                    width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                     height="300" style="border:0;" allowfullscreen="" loading="lazy" class="w-100"></iframe>
             </div>
         </div>
     </div>
