--- a/templates/400.html
+++ b/templates/400.html
@@ -9,9 +9,11 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">Oops! Page Not Found</h1>
+                <h1 class="display-4 logo-font text-black">
+                    Bad Request
+                </h1>
+                <p>Oops! The server could not understand your request. It's possible the link is broken, or the page has been moved. Please check your URL or try again later.</p>
                 <div class="my-5">
-                    <p>It looks like nothing was found at this location. Maybe try the link below?</p>
                     <h4>
                         <a href="{% url 'bazaar' %}" 
                             class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
