--- a/templates/403.html
+++ b/templates/403.html
@@ -9,9 +9,9 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">Oops! Page Not Found</h1>
+                <h1 class="display-4 logo-font text-black">Access Denied</h1>
+                <p>Sorry, you don't have permission to access this page. If you think this is a mistake, please contact our support team.</p>
                 <div class="my-5">
-                    <p>It looks like nothing was found at this location. Maybe try the link below?</p>
                     <h4>
                         <a href="{% url 'bazaar' %}" 
                             class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
