--- a/templates/500.html
+++ b/templates/500.html
@@ -9,9 +9,11 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">Oops! Page Not Found</h1>
+                <h1 class="display-4 logo-font text-black">
+                    Internal Server Error
+                </h1>
+                <p>We're experiencing some technical issues on our end. We're working to fix this as soon as possible. Please try again later.</p>
                 <div class="my-5">
-                    <p>It looks like nothing was found at this location. Maybe try the link below?</p>
                     <h4>
                         <a href="{% url 'bazaar' %}" 
                             class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
