--- a/templates/base.html
+++ b/templates/base.html
@@ -3,23 +3,20 @@
 <html lang="en">
   <head>
     {% block meta %}
-      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
       <meta name="description" content="Discover Sanda Bazaar, a unique cultural and shopping destination in Gotland. Explore our curated selection of local crafts, artisan products, and exclusive second-hand items. Visit our serene summer shop for an authentic Gotland experience.">
       <meta name="keywords" content="gotland, gotlands, gotland products, gotland bazaar, cultural items gotland, gotland artisan market, gotland handmade goods, summer shop gotland, cafe in gotland, best coffee gotland, relaxing cafe gotland, peaceful coffee spot gotland, second-hand market gotland, unique finds gotland, exclusive second-hand gotland, gotland tourist shop, must-visit in gotland, destination gotland shopping, online shopping gotland, gotland e-commerce, gotland gifts online, buy gotland products online, gotland community market, local bazaar gotland, gotland local artisans, support local gotland, sanda bazaar">
     {% endblock meta %}
     {% block extra_meta %}{% endblock %}
     {% block corecss %}
-      <link rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-            crossorigin="anonymous" />
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Eczar&display=swap" rel="stylesheet">
       <link href="https://cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+      <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock corecss %}
     {% block extra_css %}{% endblock extra_css %}
     {% block corejs %}
@@ -38,28 +35,16 @@
   </head>
   <body>
     <header class="container-fluid">
-      <div id="topnav"
-           class="row bg-sanddark pt-lg-2 d-none d-lg-flex align-items-center">
-        <!-- Adjust the placement of the image and center the search bar -->
+      <div id="topnav" class="row bg-sanddark pt-lg-2 d-none d-lg-flex align-items-center">
         <div class="col-lg-4 d-flex align-items-center">
-          <!-- The navbar logo. -->
-          <img src="{{ MEDIA_URL }}navlogo.webp"
-               alt="logo in navbar"
-               class="img-fluid ml-4"
-               style="max-width: 100px" />
+          <img src="{{ MEDIA_URL }}navlogo.webp" alt="logo in navbar" class="img-fluid ml-4" style="max-width: 100px;">
         </div>
         <div class="col-lg-4 py-2 py-lg-4 d-flex justify-content-center">
-          <!-- Center the search bar text -->
           <form method="GET" action="{% url 'bazaar' %}">
             <div class="input-group">
-              <!-- Add a custom class "custom-search-input" for the search input -->
-              <input class="form-control border border-black rounded custom-search-input"
-                     type="text"
-                     name="q"
-                     placeholder="Search our site" />
+              <input class="form-control border border-black rounded custom-search-input" type="text" name="q" placeholder="Search our site">
               <div class="input-group-append">
-                <button class="form-control btn border border-black rounded-pill mx-2"
-                        type="submit">
+                <button class="btn border border-black rounded-pill mx-2" type="submit">
                   <span class="icon">
                     <i class="fas fa-search"></i>
                   </span>
@@ -68,38 +53,28 @@
             </div>
           </form>
         </div>
-        <!-- Account options and shopping bag aligned to the far right with col-lg-4 -->
         <div class="col-lg-4 py-1 py-lg-0">
           <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-            <!-- Account Dropdown -->
             <li class="list-inline-item dropdown">
-              <a class="text-black nav-link"
-                 href="#"
-                 id="user-options"
-                 data-toggle="dropdown"
-                 aria-haspopup="true"
-                 aria-expanded="false">
-                <i class="fas fa-user fa-lg"></i> My Account</a>
-              <div class="dropdown-menu dropdown-menu-right border-0"
-                   aria-labelledby="user-options">
-                <!-- Django template conditions for user authentication and permissions -->
+              <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-user fa-lg"></i> My Account
+              </a>
+              <div class="dropdown-menu dropdown-menu-right border-0" aria-labelledby="user-options">
                 {% if request.user.is_authenticated %}
-                  {% if  request.user.is_superuser %}
+                  {% if request.user.is_superuser %}
                     <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
                   {% endif %}
                   <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                   <a href="{% url 'mywishlist' %}" class="dropdown-item">My Wishlist</a>
                   <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                  {% else %}
+                {% else %}
                   <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
                   <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                 {% endif %}
               </div>
             </li>
-            <!-- Shopping Bag -->
             <li class="list-inline-item">
-              <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                 href="{% url 'view_bag' %}">
+              <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
                 <i class="fas fa-shopping-bag fa-lg"></i>
                 {% if grand_total %}
                   ${{ grand_total|floatformat:2 }}
@@ -113,16 +88,10 @@
       </div>
       <div class="row bg-sandlight">
         <nav class="navbar navbar-expand-lg navbar-light w-100">
-          <button class="navbar-toggler"
-                  type="button"
-                  data-toggle="collapse"
-                  data-target="#main-nav"
-                  aria-controls="main-nav"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          {% include 'includes/mobile-sale-header.html' %}
+          {% include 'includes/mobile-top-header.html' %}
           {% include 'includes/navbar.html' %}
         </nav>
       </div>
@@ -150,53 +119,62 @@
     {% endblock %}
     <footer class="bg-sanddark text-black font-size-text pt-4 pb-4 mt-4 w-100">
       <div class="container">
-          <div class="row">
-              <!-- Social Media Links (Left Side) -->
-              <div class="col-md-4 mb-3">
-                  <h5>Follow Us</h5>
-                  <a href="#" class="text-white me-2">
-                      <i class="fab fa-facebook-f"></i>
-                  </a>
-                  <a href="#" class="text-white me-2">
-                      <i class="fab fa-twitter"></i>
-                  </a>
-                  <a href="#" class="text-white me-2">
-                      <i class="fab fa-instagram"></i>
-                  </a>
-              </div>
-              <!-- Address (Left Side) -->
-              <div class="col-md-4 mb-3">
-                  <h5>Visit Us</h5>
-                  <address>
-                      Sanda Nystugu 573, <br>
-                      Gotland, Sweden 623 79
-                  </address>
-              </div>
-              <!-- Newsletter Signup (Right Side) -->
-              <div id="mc_embed_shell">
-                <div id="mc_embed_signup">
-                    <form action="https://herokuapp.us21.list-manage.com/subscribe/post?u=a8f664296a6dff5b7d15b5ad9&amp;id=18f7c2d980&amp;f_id=0030f3e6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-                        <div id="mc_embed_signup_scroll"><h2>Subscribe</h2>
-                            <div class="indicates-required"><span class="asterisk font-size-text font-weight-bold">*</span> <span class="font-size-text-md font-weight-bold">indicates required</span></div>
-                            <div class="mc-field-group"><label for="mce-EMAIL"><span class="font-size-text-md font-weight-bold">Email Address</span> <span class="asterisk font-size-text font-weight-bold">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
-                            <div id="mce-responses" class="clear foot">
-                                <div class="response" id="mce-error-response" style="display: none;"></div>
-                                <div class="response" id="mce-success-response" style="display: none;"></div>
-                            </div>
-                            <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                              <input type="text" name="b_a8f664296a6dff5b7d15b5ad9_18f7c2d980" tabindex="-1" value="">
-                            </div>
-                            <div class="optionalParent">
-                                <div class="clear foot">
-                                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-                            </div>
-                        </div>
-                    </div>
-                  </form>
-              </div>
+        <div class="row">
+          <!-- Social Media Links (Left Side) -->
+          <div class="col-md-4 mb-3">
+            <h5>Follow Us</h5>
+            <a href="#" class="text-white me-2">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="text-white me-2">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="text-white me-2">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </div>
+          <!-- Address (Middle Side) -->
+          <div class="col-md-4 mb-3">
+            <h5>Visit Us</h5>
+            <address>
+              Sanda Nystugu 573, <br>
+              Gotland, Sweden 623 79
+            </address>
+          </div>
+          <!-- Newsletter Signup (Right Side) -->
+          <div id="mc_embed_shell" class="col-md-4 mb-3">
+            <div id="mc_embed_signup">
+              <form action="https://herokuapp.us21.list-manage.com/subscribe/post?u=a8f664296a6dff5b7d15b5ad9&amp;id=18f7c2d980&amp;f_id=0030f3e6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                <h2>Subscribe</h2>
+                <div class="indicates-required">
+                  <span class="asterisk font-size-text font-weight-bold">*</span>
+                  <span class="font-size-text-md font-weight-bold">indicates required</span>
+                </div>
+                <div class="mc-field-group">
+                  <label for="mce-EMAIL">
+                    <span class="font-size-text-md font-weight-bold">Email Address </span>
+                    <span class="asterisk font-size-text font-weight-bold">*</span>
+                  </label>
+                  <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required>
+                </div>
+                <div id="mce-responses" class="clear foot">
+                  <div class="response" id="mce-error-response" style="display: none;"></div>
+                  <div class="response" id="mce-success-response" style="display: none;"></div>
+                </div>
+                <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                  <input type="text" name="b_a8f664296a6dff5b7d15b5ad9_18f7c2d980" tabindex="-1" value="">
+                </div>
+                <div class="optionalParent">
+                  <div class="clear foot">
+                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                  </div>
+                </div>
+              </form>
             </div>
+          </div>
+        </div>
       </div>
-  </footer>
+    </footer>
     {% block postloadjs %}
       <script type="text/javascript">
         $('.toast').toast('show');
